--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/koa": "^3.0.1",
     "@types/koa__cors": "^5.0.1",
     "@types/koa-cors": "^0.0.6",
     "@types/node": "^25.2.3",
     "@types/pg": "^8.16.0",
+    "@types/winston": "^2.4.4",
     "nodemon": "^3.1.11",
     "prisma": "^7.4.0",
     "ts-node": "^10.9.2",
@@ -34,6 +36,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.4",
+    "jsonwebtoken": "^9.0.3",
     "koa": "^3.1.1",
     "koa-bodyparser": "^4.4.1",
     "koa-cors": "^0.0.16",
@@ -43,6 +46,7 @@
     "nodemailer": "^8.0.1",
     "pg": "^8.18.0",
     "uuid": "^13.0.0",
+    "winston": "^3.19.0",
     "yup": "^1.7.1"
   }
 }
