--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/koa": "^3.0.1",
     "@types/koa__cors": "^5.0.1",
+    "@types/koa__multer": "^2.0.8",
     "@types/koa-cors": "^0.0.6",
+    "@types/koa-multer": "^1.0.5",
+    "@types/multer": "^2.0.0",
     "@types/node": "^25.2.3",
     "@types/pg": "^8.16.0",
     "@types/winston": "^2.4.4",
@@ -43,6 +46,7 @@
     "koa-jwt": "^4.0.4",
     "koa-router": "^14.0.0",
     "koa-static": "^5.0.0",
+    "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
     "pg": "^8.18.0",
     "uuid": "^13.0.0",
