--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
     "pg": "^8.18.0",
+    "sharp": "^0.34.5",
     "uuid": "^13.0.0",
     "winston": "^3.19.0",
     "yup": "^1.7.1"
