--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "pg": "^8.18.0",
     "sharp": "^0.34.5",
     "uuid": "^13.0.0",
+    "uuidv7": "^1.1.0",
     "winston": "^3.19.0",
     "yup": "^1.7.1"
   }
